--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-MONGODB_URI="mongodb+srv://aamp898989:dronesurvillance@cluster0.cftmhkh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-DATABASE_NAME="drone_alerts_db"
-ALERTS_COLLECTION="alerts"
-DEBUG="false"
-HOST="0.0.0.0"
-DATABASE_URL="mongodb+srv://aamp898989:dronesurvillance@cluster0.cftmhkh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI=mongodb+srv://aamp898989:dronesurvillance@cluster0.cftmhkh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_NAME=drone_alerts_db
+ALERTS_COLLECTION=alerts
+DEBUG=false
+HOST=0.0.0.0
